# inoft_vocal_framework

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LambdaLayerCommands.md  MANIFEST.in  README.md  README_V0dot1.md  README_v025.md  __init__.py  dummy_object.py  exceptions.py  general_utils.py  main.py  messages.py  nested_object_to_dict_with_auto_type_checking.py  package_as_nightly_release_layer.py  package_as_nightly_release_layer_v2.py  package_nightly_release.py  persistent_attr.py  requirements.txt  safe_dict.py  serverlesspack.config.yaml  session_utils.py  setup.py  test.py  trace_item.py  utils.py  vendor.yml
audacity/: client.py  pipeclient.py  text_to_audacity.py
audio_editing/: audioclip.py  base_audio_effect.py  models.py  relation.py  sound.py  speech_synthesis.py  test.py  track.py  types.py
audio_editing/audio_effects/: __init__.py  equalizer.py  tremolo.py
audio_editing/aws_clients/: core.py  interface.py
audio_editing/tests/: test_optimized_wave.py  test_single_file.py
audio_effects/: Cargo.toml
audio_effects/src/: baller.rs  equalizer_old.rs  lib.rs  tremolo.rs
audio_effects/src/equalizer/: INITIAL_LICENSE.md  README.md  design.rs  equalizer.rs  filter.rs  kernel.rs  mod.rs  transformer.rs
audio_effects/src/equalizer/benches/: realtime.rs
audio_effects/src/generators/: sinewave.rs
audio_effects_wasm_api/: Cargo.toml  README.md
audio_effects_wasm_api/src/: applicator.rs  lib.rs
audio_engine/: Cargo.toml  Cargo.toml.old  __init__.py  audio_engine.d  audio_engine.pyd  audio_engine_old.pyd  audio_engine_wrapper.py  build.rs  libmp3lame.exp  mp3lame.lib
audio_engine/audio_effects_wasm_api/: Cargo.toml
audio_engine/audio_effects_wasm_api/src/: applicator.rs  lib.rs
audio_engine/audio_transformers/: Cargo.toml
audio_engine/audio_transformers/src/: audio_compressor.rs  base_transformer.rs  dynamic_audio_compressor.rs  lib.rs  tremolo.rs
audio_engine/audio_transformers/src/generators/: mod.rs
audio_engine/build_lame/: build.rs
audio_engine/build_lame/src/: main.rs
audio_engine/libs/: libcrypto.so.1.1
audio_engine/src/: append.rs  audio_clip.rs  decoder.rs  decoder_utils.rs  engine_api_client.rs  exporter.rs  hasher.rs  lib.old.rs  lib.rs  loader.rs  main.rs  models.rs  parser.old.rs  parser.rs  renderer.rs  resampler.rs  saver.rs  tracer.rs
audio_engine/src/tests/: mod.rs  samples.rs  tests_exports.rs  tests_signatures.rs
audio_engine/src/transformers/: audio_compressor.rs  base_transformer.rs  dynamic_audio_compressor.rs  mod.rs  tremolo.rs
audio_vst_host/: Cargo.toml
audio_vst_host/src/: main.rs  window.rs
audio_vst_host/src/windows_opengl_vst/: gvw_plugin.rs
audio_vst_host/src/windows_opengl_vst/audio_engine/: mod.rs  square_oscillator.rs
audio_vst_host/src/windows_opengl_vst/editor/: mod.rs
audio_vst_host/src/windows_opengl_vst/editor/window/: mod.rs
audio_vst_host/windows-opengl-vst/: Cargo.toml
audio_vst_host/windows-opengl-vst/src/: gvw_plugin.rs
bixby_core/: build.py  dummy_test.json  generator.py  source.js  test_model.json
bixby_core/templates/: endpoints.tem
botpress_integration/: Scene_Preparation.flow.json  Scene_Sabotage.flow.json  builtin_text.json  generator.py  main.flow.json  messages.py  state.py
botpress_integration/old_simpler_files/: builtin_text.json
botpress_integration/templates/: child_state_handler_condition.tem  handler_logic.tem  jinja_filepath_loader.py  launch_request_handler.tem  message_logic.tem  messages.tem  say_action.tem  set_variable_logic.tem  skill_app.tem  state_handler.tem  templates_access.py
cli/: aws_core.py  aws_utils.py  cli_cache.json  cli_cache.py  cli_cache.yaml  cli_index.py  deploy.py  gui_handlers.py  new.py  update.py
cli/botpress/: cli_botpress.py  content_element_object.py
cli/components/: current_project_directory.py
cli/core/: core.py  core_clients.py
cli/deploy/: cli_deploy.py  core.py  core_clients.py
cloud_providers/aws/: aws_core.py  core_clients.py  deploy_utils.py  lambda_core.py
databases/dynamodb/: __init__.py  audio_editor_projecs_dynamodb_client.py  audio_editor_projects_dynamodb_client.py  dynamodb.py  dynamodb_core.py  dynamodb_utils.py  projects_text_contents_dynamodb_client.py  team_organization_projects_dynamodb_client.py
docs/BUILDING_CONSUMING_AUDIO_ENGINE/: README.md
docs/building_audio_engine/: README.md
inoft_audio_engine_renderer/: Cargo.toml  __init__.py  audio_engine_renderer_wrapping.py  audio_engine_wrapper.py  examples.rs  inoft_audio_engine_renderer.pyd
inoft_audio_engine_renderer/DOC_BUILD_CARGO/: BUILD_CARGO.md
inoft_audio_engine_renderer/build_lame/: Cargo.toml
inoft_audio_engine_renderer/src/: append.rs  audio_clip.rs  exporter.rs  lib.rs  loader.rs  main.rs  models.rs  parser.rs  renderer.rs  resampler.rs  tokio_sample.rs
inoft_audio_engine_renderer/src/tests/: tests_exports.rs
inoft_vocal_framework/bixby_core/: build.py  generator.py
inoft_vocal_markup/: deserializer.py
middlewares/: base_middleware.py
platforms_handlers/: current_platform_data.py  current_platform_static_data.py  current_used_platform_info.py  google_assistant_v1.py  handler_input.py  nested_object_to_dict.py  response_factory.py
plotters-spectrogram-main/: Cargo.toml  LICENSE  README.md
plotters-spectrogram-main/src/: main.rs
plugins/: loader.py  plugin_base.py  plugins.json
project_bt_generator/: generator.py  main.flow.json  state.py
samples/hello_world_1/: app.py  (+1 more)
scripts/: audio_engine_build_cli.py  audio_engine_docker_builder.dockerfile  audio_engine_docker_builder.py  package_file_as_lambda.py
skill_builder/: inoft_skill_builder.py  skill_settings.py  test.py  utils.py
skill_settings/: legacy_skill_settings.py  skill_settings.py
speechs/: ssml_builder_core.py
src/: append.rs  main.rs  resampler.rs  s3.rs
tests/: test_basics.py
user_data/: user_data.py
user_data_plugins/: base_plugin.py
utils/: formatters.py  general.py
web_interface/: account_ressources.py  app.py  audiee_parser.py  backend.py  package-lock.json  project_ressources.py  static_clients.py  tsconfig.json
(+287 files in other folders)
