[package]
name = "inoft_vocal_framework"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
minimp3 = "0.5"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = { version = "0.3", features = ["full"] }