[package]
name = "audio_effects_wasm_api"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"

[lib]
name = "audio_effects_wasm_api"
crate-type = ["cdylib"]

[dependencies]
audio_effects = { path = "../audio_effects" }
hound = { version = "3.4.0" }
wasm-bindgen = "0.2"
js-sys = "0.3.50"
web-sys = { version = "0.3.50", features = ["AudioBuffer"] }

