[package]
name = "audio_effects_wasm_api"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"

[lib]
name = "audio_effects_wasm_api"
crate-type = ["cdylib"]

[dependencies]
audio_effects = { path = "../audio_effects" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.50"
web-sys = { version = "0.3.50", features = ["AudioBuffer"] }
hound = { version = "3.4.0" }


