[package]
name = "inoft_vocal_framework"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "audio_engine"
crate-type = ["cdylib"]

[dependencies]
audio_effects = { path = "../audio_effects" }
# rustfft = "6.0.0"
realfft = "2.0.0"
ndarray = "0.14.0"
ndarray-stats = "0.4.0"
colorous = "1.0.3"

hound = { version = "3.4.0" }
minimp3 = "0.5.1"
symphonia = { version = "0.1", features = [ "mp3", "wav", "flac", "ogg", "pcm" ] }
symphonia-core = { version = "0.1.0" }
log = { version = "0.4", features = [ "release_max_level_info" ] }
bincode = "1.3.1"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = { version = "0.2.23", features = ["full"] }
lame = "0.1.3"
lame-sys = "0.1.2"
claxon = "0.4.3"
gcc = "0.3.55"
libc = "0.2.12"
bytes = "0.5.6"
base64 = "0.13.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sha2 = "0.9.3"
python3-sys = "0.5.2"
cpython = { version="0.5.2", default-features=false, features=["python3-sys"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.12.0"
rb = "0.3.2"

[dev-dependencies]
tokio-test = "*"

[features]
default = []
bundled = ["gcc"]
python36 = ["cpython/python-3-6"]
python37 = ["cpython/python-3-7"]
python38 = ["cpython/python-3-8"]
python39 = ["cpython/extension-module"]

[build-dependencies]
gcc = { version = "0.3.50", optional = true }

[package.metadata.docs.rs]
features = [ "bundled" ]
