[package]
name = "inoft_vocal_framework"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "inoft_audio_engine_renderer"
crate-type = ["cdylib"]

[dependencies]
hound = "3.4.0"
minimp3 = "0.5"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
hyper = "0.13.5"
tokio = { version = "0.3", features = ["full"] }
mini-redis = "0.3"
cpython = { version = "0.5", features = ["extension-module"]}
lame = "0.1.3"
lame-sys = "0.1.2"
claxon = "0.4.3"
gcc = "0.3.55"
libc = "0.2.12"
reqwest = "0.10.9"

[features]
default = []
bundled = ["gcc"]

[build-dependencies]
gcc = { version = "0.3.50", optional = true }

[package.metadata.docs.rs]
features = [ "bundled" ]
