[package]
name = "plotters-spectrogram"
version = "0.1.0"
authors = ["Roger Filmyer <roger.filmyer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.0"
rustfft = "5.0.1"
hound = "3.4.0"
ndarray = "0.14.0"
ndarray-stats = "0.4.0"
colorous = "1.0.3"
