[package]
name = "audio_transformers"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"

[lib]
name = "audio_transformers"
crate-type = ["cdylib"]

[dependencies]
hound = { version = "3.4.0" }
wasm-bindgen = "0.2"
js-sys = "0.3.50"
web-sys = { version = "0.3.50", features = ["AudioBuffer"] }

