[package]
name = "build_lame"
version = "0.1.0"
authors = ["Robinson Labourdette <robinson@inoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bundled = ["gcc"]

[dependencies]
gcc = "0.3.55"
libc = "0.2.12"

[build-dependencies]
gcc = { version = "0.3.50", optional = true }

[package.metadata.docs.rs]
features = [ "bundled" ]